update syllabus
