# docs/swagger.json
@@ -461,6 +461,56 @@
                 }
             }
         },
+        "/syllabus/question/{id}": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Syllabus"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "syllabus",
+                        "name": "syllabus",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Syllabus"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SuccessResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/syllabus/topic/{id}": {
             "put": {
                 "security": [
@@ -713,6 +763,18 @@
         "models.Confirmer": {
             "type": "object",
             "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "consultation": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "faculty": {
+                    "type": "string"
+                },
                 "fullName": {
                     "type": "string"
                 },
@@ -847,6 +909,17 @@
                 }
             }
         },
+        "models.Question": {
+            "type": "object",
+            "properties": {
+                "questions": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "models.SuccessResponse": {
             "type": "object",
             "properties": {
@@ -867,6 +940,12 @@
                 },
                 "preface": {
                     "$ref": "#/definitions/models.PrefaceInfo"
+                },
+                "question1": {
+                    "$ref": "#/definitions/models.Question"
+                },
+                "question2": {
+                    "$ref": "#/definitions/models.Question"
                 },
                 "syllabusID": {
                     "type": "integer"
@@ -904,6 +983,9 @@
                     "type": "integer"
                 },
                 "sro": {
+                    "type": "integer"
+                },
+                "srop": {
                     "type": "integer"
                 },
                 "subjectInfo": {
