# internal/models/syllabus.go
@@ -8,18 +8,21 @@ type Syllabus struct {
 	Preface    PrefaceInfo  `json:"preface"`
 	Topics     []Modules    `json:"topics"`
 	Literature Litrature    `json:"literature"`
+	Question1  Question     `json:"question1"`
+	Question2  Question     `json:"question2"`
 }
 
 type SyllabusInfo struct {
 	SubjectInfo     Header `json:"subjectInfo"`
 	FacultyName     string `json:"facultyName"`
 	KafedraName     string `json:"kafedraName"`
-	CourseNumber    int `json:"courseNumber"`
-	CreditNumber    int `json:"creditNumber"`
-	AllHours        int `json:"allHours"`
-	LectureHours    int `json:"lectureHours"`
-	PracticeLessons int `json:"practiceLessons"`
-	SRO             int `json:"sro"`
+	CourseNumber    int    `json:"courseNumber"`
+	CreditNumber    int    `json:"creditNumber"`
+	AllHours        int    `json:"allHours"`
+	LectureHours    int    `json:"lectureHours"`
+	PracticeLessons int    `json:"practiceLessons"`
+	SRO             int    `json:"sro"`
+	SROP            int    `json:"srop"`
 }
 
 type PrefaceInfo struct {
@@ -44,6 +47,17 @@ type Topic struct {
 	Literature string `json:"literature"`
 }
 
+type SyllabusMaker struct {
+	Faculty             string `json:"faculty"`
+	Email               string `json:"email"`
+	Address             string `json:"address"`
+	TimeForConsultation string `json:"consultation"`
+}
+
+type Question struct {
+	Questions []string `json:"questions"`
+}
+
 type Litrature struct {
 	MainLiterature       []string `json:"mainLiterature"`
 	AdditionalLiterature []string `json:"additionalLiterature"`
@@ -54,18 +68,23 @@ type Header struct {
 	SpecialityName string `json:"specialityName"`
 }
 type Confirmer struct {
-	FullName   string `json:"fullName"`
-	Specialist string `json:"specialist"`
+	FullName            string `json:"fullName"`
+	Specialist          string `json:"specialist"`
+	Faculty             string `json:"faculty"`
+	Email               string `json:"email"`
+	Address             string `json:"address"`
+	TimeForConsultation string `json:"consultation"`
 }
 
 type SyllabusRepository interface {
-	Create(c context.Context, syllabusInfo SyllabusInfo, userID uint)(int , error)
+	Create(c context.Context, syllabusInfo SyllabusInfo, userID uint) (int, error)
 	UpdateMain(c context.Context, syllabus Syllabus) error
 	UpdatePreface(c context.Context, syllabus Syllabus) error
 	UpdateTopic(c context.Context, syllabus Syllabus) error
 	UpdateLiterature(c context.Context, syllabus Syllabus) error
+	UpdateQuestion(c context.Context, syllabus Syllabus) error
 	Delete(c context.Context, syllabusID int) error
 	GetByID(c context.Context, syllabusID int, userID uint) (Syllabus, error)
 	GetAllOwn(c context.Context, userID uint) ([]Syllabus, error)
-	GetAllOthers(c context.Context, userID uint , subject string) ([]Syllabus, error)
+	GetAllOthers(c context.Context, userID uint, subject string) ([]Syllabus, error)
 }
